...
                            ),
                            Padding(
                              padding: EdgeInsets.all(10.0),
                              child: Container(
                                width: 200.0,
                                child: TextFormField(
                                  key: ValueKey('signup-email_zuoh'),
                                  controller: _model.signupEmailTextController,
                                  focusNode: _model.signupEmailFocusNode,
                                  autofocus: false,
                                  enabled: true,
                                  obscureText: false,
                                  decoration: InputDecoration(
...
                            ),
                            Padding(
                              padding: EdgeInsets.all(10.0),
                              child: Container(
                                width: 200.0,
                                child: TextFormField(
                                  key: ValueKey('signup-password_j7l7'),
                                  controller:
                                      _model.signupPasswordTextController,
                                  focusNode: _model.signupPasswordFocusNode,
                                  autofocus: false,
                                  enabled: true,
                                  obscureText: !_model.signupPasswordVisibility,
...
                            ),
                            Padding(
                              padding: EdgeInsets.all(10.0),
                              child: Container(
                                width: 200.0,
                                child: TextFormField(
                                  key: ValueKey('signup-confirmpword_srmm'),
                                  controller:
                                      _model.signupConfirmpwordTextController,
                                  focusNode: _model.signupConfirmpwordFocusNode,
                                  autofocus: false,
                                  enabled: true,
                                  obscureText:
...
                  ),
                ),
              ),
              Padding(
                padding: EdgeInsets.all(24.0),
                child: FFButtonWidget(
                  key: ValueKey('signUpButton_hxvm'),
                  onPressed: () async {
                    logFirebaseEvent('SIGN_UP_PAGE_signUpButton_ON_TAP');
                    logFirebaseEvent('signUpButton_validate_form');
                    if (_model.formKey.currentState == null ||
                        !_model.formKey.currentState!.validate()) {
                      return;
...
