...
                          children: [
                            Padding(
                              padding: EdgeInsets.all(22.0),
                              child: Container(
                                width: 200.0,
                                child: TextFormField(
                                  key: ValueKey('login-email_v1jl'),
                                  controller: _model.loginEmailTextController,
                                  focusNode: _model.loginEmailFocusNode,
                                  autofocus: false,
                                  enabled: true,
                                  obscureText: false,
                                  decoration: InputDecoration(
...
                            ),
                            Padding(
                              padding: EdgeInsets.all(24.0),
                              child: Container(
                                width: 200.0,
                                child: TextFormField(
                                  key: ValueKey('login-password_rzgs'),
                                  controller:
                                      _model.loginPasswordTextController,
                                  focusNode: _model.loginPasswordFocusNode,
                                  autofocus: false,
                                  enabled: true,
                                  obscureText: !_model.loginPasswordVisibility,
...
                                ),
                              ),
                            ),
                            Padding(
                              padding: EdgeInsets.all(24.0),
                              child: FFButtonWidget(
                                key: ValueKey('loginButtonBoat_nvqn'),
                                onPressed: () async {
                                  logFirebaseEvent(
                                      'LOGIN_PAGE_loginButtonBoat_ON_TAP');
                                  logFirebaseEvent(
                                      'loginButtonBoat_validate_form');
                                  if (_model.formKey.currentState == null ||
...
