...
                        mainAxisAlignment: MainAxisAlignment.center,
                        children: [
                          wrapWithModel(
                            model: _model.contractorTaskModel,
                            updateCallback: () => safeSetState(() {}),
                            child: ContractorTaskWidget(
                              key: ValueKey('contractorTask_gme1'),
                            ),
                          ),
                        ],
                      ),
                    ),
                  ),
...
